# Nanosurf

./: README.md
ForceCurveDisplay/: CMakeLists.txt
ForceCurveDisplay/backend/: CMakeLists.txt
ForceCurveDisplay/backend/include/backend/: backend.hpp  chartData.hpp  fileDataLoader.hpp  myFilter.hpp  sample.hpp
ForceCurveDisplay/gui/: resources.qrc
ForceCurveDisplay/gui/commonResources/img/: icon.rc
ForceCurveDisplay/gui/commonResources/qml/: AppView.qml  BackgroundWindow.qml  ButtonImage.qml  Colors.qml
ForceCurveDisplay/gui/guiQml/: CMakeLists.txt
ForceCurveDisplay/gui/guiQml/include/: utils.hpp
ForceCurveDisplay/gui/guiWidgets/resources/qml/: MyDragHandler.qml  main.qml
interview/ForceCurveDisplay/: Interview Coding Homework.docx
interview/ForceCurveDisplay/backend/include/backend/: dataLoader.hpp  filter.hpp  parser.hpp  sampleParser.hpp
interview/ForceCurveDisplay/gui/: CMakeLists.txt
interview/ForceCurveDisplay/gui/commonResources/qml/: Chart.qml  MyButton.qml
interview/ForceCurveDisplay/gui/guiQml/resources/qml/: MyDragHandler.qml  main.qml
interview/ForceCurveDisplay/gui/guiQml/src/: main.cpp
interview/ForceCurveDisplay/gui/guiWidgets/: CMakeLists.txt  resourcesWidgets.qrc
interview/ForceCurveDisplay/gui/guiWidgets/include/: utils.hpp
interview/ForceCurveDisplay/gui/guiWidgets/src/: main.cpp
logs_filtering/: CMakeLists.txt  filter.h  log_circular_list_model_qt.h  log_delegate_qt.h  log_filter_qt.h  log_item.h  log_item_qt.h  log_proxy_model_qt.h  log_subscriber_interface.h  log_target_interface.h  log_target_interface_with_subscribers.h  logger.h  main.cpp  my_target_in_program_memory.h  my_target_on_disk.h  proxy_model.h
